# command-runner

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
migrations/: 1750352133_init.sql
nix/: command-runner.nix
nix/homeManagerModules/: command-runner.nix
nix/nixosModules/: command-runner.nix
src/: app.rs  cli.rs  command.rs  config.rs  database.rs  errors.rs  lib.rs  main.rs  routes.rs  users.rs
systemd/: command-runner-server.sysusers  command-runner.service
