[workspace]
members = ["."]
resolver = "2"
[package]
name = "command-runner"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-login = "0.17.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dunce = "1.0.5"
error-stack = { version = "0.5", features = ["serde"] }
http = "1.3.1"
password-auth = "1.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "sqlite",
  "time",
  "uuid",
] }
tap = "1.0.1"
thiserror = "2.0"
tokio = { version = "1.43.1", features = [
  "process",
  "rt-multi-thread",
  "tokio-macros",
] }
toml = "0.8.23"
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dev-dependencies]
serde_urlencoded = "0.7.1"
